# deft-coder

./: LICENSE.md  NOTICE.md  README.md  RELEASE.md
.github/workflows/: test-macos.yml
benchmark/rust-btree-map/: Cargo.toml  PROMPT.md  TESTER_INSTRUCTIONS.md
configs/: config.claude-kimi.json  config.claude.json  config.deepseek.json  config.gemini-adc.json  config.gemini.json  config.glm.json  config.kimi.json  config.openai.json  config.xai.json  guardrails.js  reminders.example.json  system_prompt.example.md
docs/: configuration.md  guardrails_api.md  neovim-integration.md  reminder-system.md  sample_runtime_log_subtask_test.txt  sample_session_interaction.json  skills.md  tools.md
mcp-server/fs/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
mcp-server/git/: build.js  package-lock.json  package.json
mcp-server/sandbox-ts/: Dockerfile  package-lock.json  package.json  tsconfig.json
mcp-server/search/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
nvim-plugin/: diff.lua  hint.lua  init.lua  ipc.lua  ipc.schema.json  query.lua
release/: deft-1.0.2.tgz  deft-1.0.3.tgz  deft-1.0.4.tgz  deft-1.0.5.tgz  deft-1.0.6.tgz
release/linux/: deft-1.0.2.tgz
skills/chrome-devtools/: SKILL.md
skills/code-navigation/: SKILL.md
skills/debug-ts-build-failure/: SKILL.md
skills/filesystem/: SKILL.md
skills/git-scm/: SKILL.md
skills/project-discovery/: SKILL.md
system-programming-benchmark/: README.md
system-programming-benchmark/rust-async-multithread-executor/: Cargo.toml  PROMPT.md  TESTER_INSTRUCTION.md
(+41 files in other folders)
