[package]
name = "rust-executor-multithread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.13"
crossbeam-queue = "0.3.11"
dashmap = "6.1.0"
env_logger = "0.11.5"
log = "0.4.22"
mio = { version = "1.0.1", features = ["net", "os-poll", "os-ext"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
